# ogre2-sample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Common/: BaseSystem.cpp  BaseSystem.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  GameEntityManager.cpp  GameEntityManager.hpp  GameState.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  LogicSystem.cpp  LogicSystem.hpp  SdlInputHandler.cpp  SdlInputHandler.hpp  TutorialGameState.cpp  TutorialGameState.hpp
src/Common/Threading/: MessageQueueSystem.cpp  MessageQueueSystem.hpp
src/Sample/: CMakeLists.txt  CMakeLists.txt.bak  Sample.cpp  SampleGameState.cpp  SampleGameState.hpp
